--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^6.3.19",
+    "g": "^2.0.0",
+    "jsdoc": "^3.4.0",
     "webpack": "^1.12.11"
   },
   "dependencies": {
